<resources>
    <string name="app_name">Sapivents</string>
    <string name="example_button">Example button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_account">Account</string>
    <string name="placeholder_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="event_edit_add_save">Save</string>
    <string name="event_edit_add_change_image">Change image</string>
    <string name="event_edit_add_name_hint">Event name</string>
    <string name="event_edit_add_desc_hint">Event description</string>
    <string name="signIn_button">Sign In</string>
    <string name="sign_in_password_hint">Type your validation code here</string>
    <string name="event_edit_add_date_hint">Event date</string>
    <string name="event_edit_add_location_hint">Event location</string>
    <string name="event_detail_attending_label">Number of people attending: </string>
    <string name="event_detail_attend_button">Attend</string>
    <string name="event_detail_unattend_button">Unattend</string>
    <string name="not_registered_button">Not registered?</string>
    <string name="phone_number_textView_hint">Type your phone number</string>
    <string name="firstName_editText">First name</string>
    <string name="lastName_editText">Last name</string>
    <string name="phoneNumber_editText">Phone number</string>
    <string name="register_button">Sign Up</string>
    <string name="my_events_button_text">My events</string>
    <string name="save_btn">Save</string>
    <string name="user_profile_edit_btn">Edit</string>
    <string name="user_fname_textView">First Name</string>
    <string name="user_lname_textView">Last Name</string>
    <string name="user_phone_number_textView">Phone Number</string>
    <string name="no_events">You haven\'t created any events yet</string>
</resources>
